# th-abstraction

./: .gitignore  .travis.yml  ChangeLog.md  README.md  UseIt.hs  cabal.haskell-ci  th-abstraction.cabal
.github/workflows/: haskell-ci.yml
src/: ConstructorInfo.hs
src/Language/Haskell/TH/: Datatype.hs
src/Language/Haskell/TH/Datatype/: Internal.hs  TyVarBndr.hs
test/: Harness.hs  Main.hs  Types.hs
