name:                th-abstraction
version:             0.1.0.0
synopsis:            Nicer interface to reified information about data types
-- description:         
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.4.2

library
  exposed-modules:     Language.Haskell.TH.Datatype
  build-depends:       base             >=4.5   && <5,
                       ghc-prim,
                       template-haskell >=2.4   && <2.13,
                       containers       >=0.4   && <0.6,
                       semigroups       >=0.8.4 && <1
  hs-source-dirs:      src
  default-language:    Haskell2010
